# odsc-2025-agent-eval

./: .gitignore  README.md  data_analysis_agent.py  evaluation.py  evaluation_weave.py  main.py  notebook.ipynb  pyproject.toml
