[project]
name = "odsc-2025-agent-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "seaborn>=0.13.2",
    "weave>=0.51.0",
]
